--- a/gallery.html
+++ b/gallery.html
@@ -96,11 +96,11 @@
                     </div>
                     <div class="project-image-gallery">
                         <div class="project">
-                            <img class="image-item" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218072&authkey=%21AKSy_s2R8ZYuBJ0&width=3024&height=4032" alt="Lohman Project Image"/>
+                            <img class="image-item" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218940&authkey=%21AMyauVpmKWI0c54&width=1363&height=1817" alt="Lohman Project Image"/>
                             <div class="project-overlay"><span>Laura Lohman: Queen Anne Urban Oasis</span></div>
                         </div>
                         <div class="project">
-                            <img class="image-item"src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218069&authkey=%21AD0ZbJxo0nd3YAw&width=3024&height=4032" alt="Watson Project Image"/>
+                            <img class="image-item"src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628" alt="Watson Project Image"/>
                             <div class="project-overlay"><span>Andrea Watson: Queen Anne Woodland</span></div>
                         </div>
                         <div class="project">
@@ -117,46 +117,47 @@
                     <div class="image-gallery">
                         <div class="column">
                             <div class="image-item" id="image-item-1">
-                                <img src="https://dsm01pap009files.storage.live.com/y4meNRd58I_vov14uC-RSm7V1c0SVhO7bYQYM2c1qs4NZlbzahZNpRwcDIeJ7d5HeHMGok3p2ZtkgbxQN7DHwbNyNq0goO5GaPYPa_9XWJ8Iy-2KsBTpyuyHp6Tul_Qt0ZW-7CRS8HcWeQN7C8QsU6sHg5skp0OlLC7ycvO-5kAvquITGYLkppgqmkBApDQH_gD?width=3024&height=4032&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 1</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218939&authkey=%21AKAwD481dcoUkRU&width=1488&height=1984" alt="Fountain Grasses"/>
+                                <div class="overlay"><span>Fountain Grasses</span></div>
                             </div>
                             <div class="image-item" id="image-item-2">
-                                <img src="https://dsm01pap009files.storage.live.com/y4m-BuexTNboPWJq9ycVIHqx0R59cj454gRzneH42qNJeOadi_QcOo4l0UYtBQthHnVHJvHkLA9DcI1vN3EQhfnONtsm2lb2SOhgtMRSAmpv4Mr9dbE6FiPfZ1vQxaJ_wjz24Mbvehso6FbuJggHzdhPXL33BhTtZ3bwJeM_Q4ZA93eSgInKhYMa2TX6_dVBQFJ?width=3024&height=3318&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 2</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218931&authkey=%21AM1H1ug-i8ipJ40&width=1341&height=1472" alt="Fritillaria, Ferns, and Soldanella"/>
+                                <div class="overlay"><span>Fritillaria, Ferns, and Soldanella</span></div>
                             </div>
                             <div class="image-item" id="image-item-3">
-                                <img src="https://dsm01pap009files.storage.live.com/y4mogC_GhqGDJzq5Ws1T4RbF77j9M4Q6yM0NZia4z4UvKXJSL3EwpkryKausBy52hIlyix7Y9jwsF9V0GD6MSpv12X27_lkRACRBcPnqiqG0ZE4f6t6BtWh2AJ7bmje7sw3wvzNi4qTtp7lc_MjB8dfM6hYpdlCIIi7KFOS7W0YRfUKeeRabpjzTpmYp-QEEeMH?width=4032&height=3024&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 3</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218930&authkey=%21AGDylNsoe75DODw&width=1540&height=1155" alt="Backyard Flowers"/>
+                                <div class="overlay"><span>Backyard Flowers</span></div>
                             </div>
                         </div>
     
                         <div class="column">
                             <div class="image-item" id="image-item-4">
-                                <img src="https://dsm01pap009files.storage.live.com/y4m6G8Jc9-65LnHqb2pVTO5pVe3CBjNBZpOjOjtoTsZxq3GNZv3Rr8qoEecEGHTJQF0uWHXDwGJhvzlomNqJxiIIBen-dFcv1aIchACSMklv6HlEwwEEJzTgVhUHqdTMo7Fo4wshznWQEJw6cX7y2YUCWGRuo8_ZEelwPmlrcwlGDes3-6KHL2tDOcOmO90tO22?width=3469&height=2647&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 4</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218943&authkey=%21APsNlGA8lLFZDQY&width=1204&height=918" alt="Watson house, front view"/>
+                                <div class="overlay"><span>Watson House</span></div>
                             </div>
                             <div class="image-item" id="image-item-5">
-                                <img src="https://dsm01pap009files.storage.live.com/y4mcRA8MkX-_PKRPseO6BBX5BubyrKF37JKPtYvqitjABV0mlL3DYLkYvbEKd9BD3sBfqvPhntRXLXWsYGWq7UO0LMo9Oud08QUo6ioCTdAslJ59YzxbOgqRis-Rat2L-6qrm4-ltsQWEOWo5d-8gkzh0ycjSqnRqbK-1z0-coGx3xJDDBT3BFm9V8jd_gXuIxj?width=3024&height=4032&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 5</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218933&authkey=%21AIa5YTJrcXq-lBw&width=1364&height=1819" alt="Fern"/>
+                                <div class="overlay"><span>Fiddle Heads</span></div>
                             </div>
                             <div class="image-item" id="image-item-6">
-                                <img src="https://dsm01pap009files.storage.live.com/y4mJiCaN-BDN1QAX_SEi8iQr_jvn78fUQo4LdREsdrCAYrRcYk28VxUiaw1vsL2ew43VGzWrm9aBFYieehWOfSRbQWX3AtLWbrQQ5At2OfyoO9Re8BjM12F2m85oaPVG0jH9XcgA17XDWTLGms49_TpGr-Gev0V73AtH4nrg8z1pBBAnrItGk38tsL3o1koSMEr?width=3024&height=4032&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 6</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218932&authkey=%21AKJ-HrFtO1AHtac&width=1221&height=1628" alt="Lupin Bush Image"/>
+                                <div class="overlay"><span>Lupin Bush</span></div>
                             </div>
                         </div>
     
                         <div class="column">
                             <div class="image-item" id="image-item-7">
-                                <img src="https://dsm01pap009files.storage.live.com/y4mnKWDxYXXxoriaQO86olz6a3w5K8YytVcNXJPPkrDXCG4gWYqCDRja0Mn7BaAQ50y0h8AFTwm7SPZ-q68TBD_qmPv9PvztVVOOR5F5JUmRO8Qu0yV5r98g1ZcaqFGZbhOEeXWyF5lVFAXQjidQmbpLMXiYFCK0qXcCDUowhQuM4-_ws-n36-_gK6nGdxzmn7P?width=3024&height=4032&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 7</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218938&authkey=%21ALCiPb3kWQKSqTg&width=1196&height=1594" alt="Watson House Garden"/>
+                                <div class="overlay"><span>Watson Garden
+                                </span></div>
                             </div>
                             <div class="image-item" id="image-item-8">
-                                <img src="https://dsm01pap009files.storage.live.com/y4molgt21s7AoxsY0GZzqpZ7dCQkdLT_j7Pi8ROswWfPyEzlLCgtDQXXZbgY-8in-TYlR8wwbHQJLtYlJhD6DcHvMBTXJF4esSeZiCSSgF25nwrOgpnyLxZUQCwNBt5zabaSWvTitK1YdtnW9yoHfyM30YCpE4Tz9C4AzGUBTcv6XbK9sqhRytIYWr7bvkaEXhI?width=3469&height=2647&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 8</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218942&authkey=%21AAjGm-W9UqtbRl0&width=1350&height=1030" alt="Fencing and Stonework"/>
+                                <div class="overlay"><span>Grasses and Stonework</span></div>
                             </div>
                             <div class="image-item" id="image-item-9">
-                                <img src="https://dsm01pap009files.storage.live.com/y4mvLTYv6elUtkWBW1b6ELAlzkrrqkmX_YLZJVhKtO-y_HLufL9arpZvDaruBR-0kQ386HMW0rSO2wbI16u8LL6r45RCxfWOOl_mZfJ6J3nV6ZJUXhWM0civgMaI60z_kycRRbhUrNL3nnO1_2fWDU7OuKwO0RsVo3BdvwkAoKYHo3uYqZrPHk5idJ0Ffxn2khJ?width=3024&height=4032&cropmode=none" alt="Garden Image"/>
-                                <div class="overlay"><span>Garden 9</span></div>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218934&authkey=%21AFz-HmJvyTD-biw&width=1136&height=1515" alt="Lupin Flower"/>
+                                <div class="overlay"><span>Lupin Flower</span></div>
                             </div>
                         </div>
                     </div>
@@ -168,15 +169,15 @@
                     <div class="image-gallery">
                         <div class="column">
                             <div class="image-item" id="image-item-1">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218585&authkey=%21AO0S0Zmkd8IAda4&width=4646&height=3274" alt="Garden Design Artwork for Rasmussen"/>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218946&authkey=%21AKkWZnBTNiMIUkc&width=1920&height=1351" alt="Garden Design Artwork for Rasmussen"/>
                                 <div class="overlay"><span>Rasmussen Plan</span></div>
                             </div>
                             <div class="image-item" id="image-item-2">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218592&authkey=%21AClfzGt06VC8Owc&width=5094&height=3295" alt="Garden Design Artwork for Paulson"/>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218948&authkey=%21AG3bsl8V-a3eVx0&width=1920&height=1242" alt="Garden Design Artwork for Paulson"/>
                                 <div class="overlay"><span>Paulson Plan</span></div>
                             </div>
                             <div class="image-item" id="image-item-3">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218590&authkey=%21AGg7uRrcdWuVc2g&width=5007&height=2924" alt="Garden Design Artwork for Short"/>
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218949&authkey=%21AB81xSZGedRwtiw&width=1920&height=1121" alt="Garden Design Artwork for Short"/>
                                 <div class="overlay"><span>Short Plan</span></div>
                             </div>
                             <div class="image-item" id="image-item-4">
