--- a/services.html
+++ b/services.html
@@ -50,9 +50,9 @@
                         <li id="dropdown">
                             <a id="dropdown-btn" href="services.html">Services</a>
                             <div id="dropdown-content" class="hide-xs" > 
-                                <a href="tree-care.html">Tree Care</a>
-                                <a href="garden-design.html">Garden Design</a>
-                                <a href="hire-us.html">Hire Us!</a>
+                                <a href="services.html#tree-care">Tree Care</a>
+                                <a href="services.html#garden">Garden Design</a>
+                                <a href="services.html#questionnaire">Hire Us!</a>
                             </div>
                         </li>
                         <li class="non-drop"><a href="wip.html">About</a></li>
@@ -96,7 +96,7 @@
                     </div>
                     <div id="tree-care" class="content-item">
                         <div class="image-row">
-                            <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218840&authkey=%21AJ34zBRNz1yt2hc&width=2590&height=1647">
+                            <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218925&authkey=%21ADzciKJtCW6CtP0&width=1024">
                         </div>
                         <h3>ISA Certified Arborists dedicated to trees and their health.
                         </h3>
@@ -108,7 +108,7 @@
                     </div>
                     <div id="garden" class="content-item">
                         <div class="image-row">
-                            <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218585&authkey=%21AO0S0Zmkd8IAda4&width=4646&height=3274" alt="Rasmussen Garden Plan Architectural Illustration">
+                            <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218946&authkey=%21AKkWZnBTNiMIUkc&width=1920&height=1351" alt="Rasmussen Garden Plan Architectural Illustration">
                         </div>
                         <h3>
                             Gaia Gardens can help make those garden goals a reality.
