--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,19 @@
             </div>
             <div class="dark-overlay hide-xs"></div>
         </div>
+        
+        <div class="overlay-project-container">
+            <div class="overlay-project hide-xs">
+                <img class="projectx" src="https://dsm01pap009files.storage.live.com/y4m47swC9qlH0QYR6nxWgyP45EEWG7fAUXFfFd1B90c_f7tTE29KjhANP7O02vr_r05ArR2IYPWTXd2pMGBFgxo6wFfBTd4XqcDS6TjYyfNRR1I6NQirgDxTz19SK-_b66LUKA9rUklVh_1foQ0ix7Lmn0MBIVPpMeMwp_E61gN_x2GL0OSvtCPwxSNZNlHkOE5?width=256&height=256&cropmode=none">
+                <div class="project-content">
+                    <img src="">
+                    <h2 id="project-name">Name</h2>
+                    <p id="project-text1">Lorem ipsum dolor sit </p>
+                    <p id="project-text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus iure, cumque, nulla quisquam quas est aspernatur facilis tempora totam dolorum nihil voluptate rerum omnis maiores odio. Rerum, dignissimos. Neque, rem!</p>
+                </div>
+            </div>
+            <div class="dark-overlay hide-xs"></div>
+        </div>
         <section class="main-body">
             <div class="top-bar">
                 <img id="gaia-logo-top" alt="logo" src="https://dsm01pap009files.storage.live.com/y4m9R_HTu5PouYK33ObsQ9kb9GF8ebirPWZzEYAlS3DbSUEzmz-7XXU9y6bcT2BBefhtoNbQ7YWGaaQexis0GsMdaI9Uy95V--vDJZZ5lJQZCXppIDNVTGaU3qscJA3n2HpASt1_h0krz3glFW0jejrCErOyC_B-HVa8pGYwpa2pNjLuoOiu4q-XXaQ5BzILkGO?width=165&height=97&cropmode=none">
@@ -95,16 +108,16 @@
                         <h2>Projects</h2>
                     </div>
                     <div class="project-image-gallery">
-                        <div class="project">
+                        <div class="project" id="project1">
                             <img class="image-item" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218940&authkey=%21AMyauVpmKWI0c54&width=1363&height=1817" alt="Lohman Project Image"/>
                             <div class="project-overlay"><span>Laura Lohman: Queen Anne Urban Oasis</span></div>
                         </div>
-                        <div class="project">
-                            <img class="image-item"src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628" alt="Watson Project Image"/>
+                        <div class="project" id="project2">
+                            <img class="image-item"  src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628" alt="Watson Project Image"/>
                             <div class="project-overlay"><span>Andrea Watson: Queen Anne Woodland</span></div>
                         </div>
-                        <div class="project">
-                            <img class="image-item" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810" alt="Volum Project Image"/>
+                        <div class="project" id="project3">
+                            <img class="image-item"  src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810" alt="Volum Project Image"/>
                             <div class="project-overlay"><span>Sam Volum: Madison Park Beach Vibes</span></div>
                         </div>
                     </div> 
