--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
                     </div>
                     <div id="treesforeground">
                         <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218980&authkey=%21AG1cGfARGp_Qh6g&width=662&height=1378">
-                        <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218984&authkey=%21AIUItdoqtJq34bk&width=662&height=906">
                     </div>
                     <img id="treesmiddle" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218982&authkey=%21AHZx0UVZtVPsH1Q&width=662&height=1378">
                     <img id="treesbg" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218981&authkey=%21AB3pRrmK-7__UeI&height=1378&width=662">
@@ -149,7 +148,7 @@
                     <div id="item4" class="content-item">
                         <div id="container-column">
                             <h3>Gaia Gardens has been operating out of Washington State’s King County Since 2019.</h3>
-                            <a class="arrow-button-anchor" href="">
+                            <a class="arrow-button-anchor hide-xs" href="">
                                 <div class="green-arrow-button">
                                     <p>read more</p>
                                     <img class="arrow"src="https://dsm01pap009files.storage.live.com/y4mvqEOWGiyQU38oAVwob-bAO3Cdjfn7rffqEatWW7K0QEg0Wpa4hMDXimps9XS69hJqdQutE5eUWFaXK_YYrcNaGO2ya67pHg_LEMo5aO5maBpJZOW964IhK_QGPN4vjtsPqR78ABJ6pPFbE7fx6yrB4adHMs6m2roZrHaRIdeNEZfuEkpM1QFQoZDPT9KNKEP?width=114&height=12&cropmode=none">
@@ -162,14 +161,14 @@
                         <div id="item5-grid">
                             <a href="services.html#garden">
                                 <div class="item5-column">
-                                    <img alt="Garden Design Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218752&authkey=%21AAEEz8FClYAGgyY&width=410&height=275">
+                                    <img class="hide-xs" alt="Garden Design Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218752&authkey=%21AAEEz8FClYAGgyY&width=410&height=275">
                                     <h5>Garden Design and Installation</h5>
                                     <p>Years of experience brings exceptional design and an aesthetic eye to your garden.</p>
                                 </div>
                             </a>
                             <a href="services.html#tree-care">
                                 <div class="item5-column">
-                                    <img alt="Tree Care Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218753&authkey=%21AOtp8AYU-Q5jqRQ&width=410&height=274">
+                                    <img class="hide-xs" alt="Tree Care Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218753&authkey=%21AOtp8AYU-Q5jqRQ&width=410&height=274">
                                     <h5>Tree Maintenance and Removal</h5>
                                     <p>Being certified means we hold ourselves to the highest standard of ethics when it comes to working with trees.</p>
                                 </div>
@@ -189,9 +188,9 @@
             </section>
             
             <!---footer---->
-            <section class="footer hide-xs">
-                <img id="gaiaartwork" alt="Gaia Gardens Logo" src="https://dsm01pap009files.storage.live.com/y4mifrXWDn3yxB9gNAbVy-Jupr7RdVoeD0kT7TOj5EGvlu9PlruiEE_PYUQQbYkNcsWnRDShMMbOlPxawJz4W0eNv2sY2my3F6KodFZ8nEQTxGMs_5nxZ-_zR8HdlmTIFI4hF0oIhA5LX70OFrwnEfauXGKGcWoj6_lmcTfAcJ6nCyubuO_No4MUYpLi_uggUK7?width=415&height=417&cropmode=none">
-                <ul class="footer-ul">
+            <section class="footer">
+                <img id="gaiaartwork" class="hide-xs" alt="Gaia Gardens Logo" src="https://dsm01pap009files.storage.live.com/y4mifrXWDn3yxB9gNAbVy-Jupr7RdVoeD0kT7TOj5EGvlu9PlruiEE_PYUQQbYkNcsWnRDShMMbOlPxawJz4W0eNv2sY2my3F6KodFZ8nEQTxGMs_5nxZ-_zR8HdlmTIFI4hF0oIhA5LX70OFrwnEfauXGKGcWoj6_lmcTfAcJ6nCyubuO_No4MUYpLi_uggUK7?width=415&height=417&cropmode=none">
+                <ul class="footer-ul hide-xs">
                     <li class="footer-li" id="contact">
                         <h5 class="small-heading">Contact</h5>
                         <div class="three-line-container">
