--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
     
     <body>
         <div class="loader"></div>
-        <div class="overlay-carousel-container">
+        <div class="overlay-carousel-container hide-xs">
             <div class="overlay-carousel hide-xs">
                 <img class="x" src="https://dsm01pap009files.storage.live.com/y4m47swC9qlH0QYR6nxWgyP45EEWG7fAUXFfFd1B90c_f7tTE29KjhANP7O02vr_r05ArR2IYPWTXd2pMGBFgxo6wFfBTd4XqcDS6TjYyfNRR1I6NQirgDxTz19SK-_b66LUKA9rUklVh_1foQ0ix7Lmn0MBIVPpMeMwp_E61gN_x2GL0OSvtCPwxSNZNlHkOE5?width=256&height=256&cropmode=none">
                 <div class="overlay-carousel-picture"></div>
@@ -52,11 +52,13 @@
         </div>
         <section class="main-body">
             <div class="top-bar">
-                <img id="gaia-logo-top" alt="logo" src="https://dsm01pap009files.storage.live.com/y4m9R_HTu5PouYK33ObsQ9kb9GF8ebirPWZzEYAlS3DbSUEzmz-7XXU9y6bcT2BBefhtoNbQ7YWGaaQexis0GsMdaI9Uy95V--vDJZZ5lJQZCXppIDNVTGaU3qscJA3n2HpASt1_h0krz3glFW0jejrCErOyC_B-HVa8pGYwpa2pNjLuoOiu4q-XXaQ5BzILkGO?width=165&height=97&cropmode=none">
+                <img id="hamburger" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218963&authkey=%21ABErlrmlD5xalUc&width=32&height=28">
+                <img id="gaia-logo-top"class="hide-xs" alt="logo" src="https://dsm01pap009files.storage.live.com/y4m9R_HTu5PouYK33ObsQ9kb9GF8ebirPWZzEYAlS3DbSUEzmz-7XXU9y6bcT2BBefhtoNbQ7YWGaaQexis0GsMdaI9Uy95V--vDJZZ5lJQZCXppIDNVTGaU3qscJA3n2HpASt1_h0krz3glFW0jejrCErOyC_B-HVa8pGYwpa2pNjLuoOiu4q-XXaQ5BzILkGO?width=165&height=97&cropmode=none">
                 <div class="spacer"></div>
             </div>
             <header id="alternate-nav-header">
-                <nav id="main-nav" class="hide-xs">
+                <img id="gaia-logo-mobile" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218964&authkey=%21AJJM923R_qkmnYU&width=217&height=128">
+                <nav id="main-nav">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
                         <li class="non-drop"><a href="gallery.html">Gallery</a></li>
@@ -198,14 +200,14 @@
                                 <div class="overlay"><span>Lamb Plan</span></div>
                             </div>
                     </div>
-                    <img id="treeline" src="https://dsm01pap009files.storage.live.com/y4m0h22DC8U8f0OF1CJojR5NlciGIdPJrVz_jpV3LCtJGwQlHRFwFid1RKWOmw2rI15unZK-SRWH3X_jIsEDC6Jo1c-9eCRy6Z4Q_4IiTJ8q4A1ZV0p0mgR86dwDX5TnlIr7Fz4WGAMXDwzllSJxyWw3Oy-JeHIGNGtRDjgtd2KPHrOTTxUYoKrmcyVE0CnVesa?width=1916&height=784&cropmode=none">
+                    <img class="hide-xs" id="treeline" src="https://dsm01pap009files.storage.live.com/y4m0h22DC8U8f0OF1CJojR5NlciGIdPJrVz_jpV3LCtJGwQlHRFwFid1RKWOmw2rI15unZK-SRWH3X_jIsEDC6Jo1c-9eCRy6Z4Q_4IiTJ8q4A1ZV0p0mgR86dwDX5TnlIr7Fz4WGAMXDwzllSJxyWw3Oy-JeHIGNGtRDjgtd2KPHrOTTxUYoKrmcyVE0CnVesa?width=1916&height=784&cropmode=none">
                 </div>
             </section>
             
             <!---footer---->
-            <section class="footer hide-xs">
-                <img id="gaiaartwork" alt="Gaia Gardens Logo" src="https://dsm01pap009files.storage.live.com/y4mifrXWDn3yxB9gNAbVy-Jupr7RdVoeD0kT7TOj5EGvlu9PlruiEE_PYUQQbYkNcsWnRDShMMbOlPxawJz4W0eNv2sY2my3F6KodFZ8nEQTxGMs_5nxZ-_zR8HdlmTIFI4hF0oIhA5LX70OFrwnEfauXGKGcWoj6_lmcTfAcJ6nCyubuO_No4MUYpLi_uggUK7?width=415&height=417&cropmode=none">
-                <ul class="footer-ul">
+            <section class="footer">
+                <img class="hide-xs" id="gaiaartwork" alt="Gaia Gardens Logo" src="https://dsm01pap009files.storage.live.com/y4mifrXWDn3yxB9gNAbVy-Jupr7RdVoeD0kT7TOj5EGvlu9PlruiEE_PYUQQbYkNcsWnRDShMMbOlPxawJz4W0eNv2sY2my3F6KodFZ8nEQTxGMs_5nxZ-_zR8HdlmTIFI4hF0oIhA5LX70OFrwnEfauXGKGcWoj6_lmcTfAcJ6nCyubuO_No4MUYpLi_uggUK7?width=415&height=417&cropmode=none">
+                <ul class="footer-ul hide-xs">
                     <li class="footer-li" id="contact">
                         <h5 class="small-heading">Contact</h5>
                         <div class="three-line-container">
