--- a/index.html
+++ b/index.html
@@ -156,8 +156,12 @@
                             </a>
                         </div>
                     </div>
+                    <div class="content-item hide-xl" id="pruningpic">
+                        <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218821&authkey=%21AHa35zRL67VsdjQ&width=2590&height=2996"  width="100%" alt="Arborist Pruning a Tree">
+                    </div>
                     <div id="item5" class="content-item">
                         <h3>Our Services</h3>
+                        <p class="hide-xl">Gaia Gardens offers services in <a href="services.html#garden">Garden Design</a> and <a href="services.html#tree-care">Tree Maintenance and Removal</a>. Gaia Gardens is ISA Certified, meaning we hold ourselves to the highest standard of ethics when it comes to working with trees. Interested in hiring us? Please fill out our <a href="services.html#questionnaire">questionnaire</a> and we will get back to you to set up a consultation.</p>
                         <div id="item5-grid" class="hide-xs">
                             <a href="services.html#garden">
                                 <div class="item5-column">
