--- a/gallery.html
+++ b/gallery.html
@@ -38,16 +38,7 @@
             <div class="dark-overlay hide-xs"></div>
         </div>
         
-        <div class="overlay-project-container">
-            <div class="overlay-project hide-xs">
-                <img class="projectx" src="https://dsm01pap009files.storage.live.com/y4m47swC9qlH0QYR6nxWgyP45EEWG7fAUXFfFd1B90c_f7tTE29KjhANP7O02vr_r05ArR2IYPWTXd2pMGBFgxo6wFfBTd4XqcDS6TjYyfNRR1I6NQirgDxTz19SK-_b66LUKA9rUklVh_1foQ0ix7Lmn0MBIVPpMeMwp_E61gN_x2GL0OSvtCPwxSNZNlHkOE5?width=256&height=256&cropmode=none">
-                <div class="project-content">
-                    <img src="">
-                    <h2 id="project-name">Name</h2>
-                    <p id="project-text1">Lorem ipsum dolor sit </p>
-                    <p id="project-text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus iure, cumque, nulla quisquam quas est aspernatur facilis tempora totam dolorum nihil voluptate rerum omnis maiores odio. Rerum, dignissimos. Neque, rem!</p>
-                </div>
-            </div>
+        
             <div class="dark-overlay hide-xs"></div>
         </div>
         <section class="main-body">
@@ -78,7 +69,7 @@
             <!------Main Content-------->
             <section class="content-otherpages">
                 <div class="content-grid">
-                    <div id="carousel">
+                    <div id="carousel" class="hide-xs">
                         <h2 id="whitetitle">Featured Garden Designs</h2>
                         <div id="carousel-arrows">
                             <div id="leftdiv"><img id="leftarrow" src="https://dsm01pap009files.storage.live.com/y4mZ7yYcmq_nswqThn8EKlvm_9QxXMixTYQDsl5O1E8MTMfH2DtdAHgm2NgjvggzixhD1SOZzro5r-lXtCXYaCwfDryxBPLSoSwwWZ-S9J3N77qGbsB--jb9XBPXo-OCN4V4nHPvOTL89alF8hhYzXc_DCPrQ-UQABkaUN0rFTdpwQOQFer3r_mXW3erZqVQdZt?width=22&height=85&cropmode=none"></div>
@@ -112,10 +103,10 @@
                     <div class="project-image-gallery">
                         <div class="project" id="project1">
                             <img class="image-item" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218940&authkey=%21AMyauVpmKWI0c54&width=1363&height=1817" alt="Lohman Project Image"/>
-                            <div class="project-overlay"><span>Laura Lohman: Queen Anne Urban Oasis</span></div>
+                            <div class="project-overlay"><a href="project1.html"><span>Laura Lohman: Queen Anne Urban Oasis</span></a></div>
                         </div>
                         <div class="project" id="project2">
-                            <img class="image-item"  src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628" alt="Watson Project Image"/>
+                                <img class="image-item"  src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628" alt="Watson Project Image"/>
                             <div class="project-overlay"><span>Andrea Watson: Queen Anne Woodland</span></div>
                         </div>
                         <div class="project" id="project3">
