--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
                 </nav>
             </header>
             <!------Main Content-------->
-            <section class="content-otherpages">
+            <section class="content-container">
                 <div class="content-grid">
                     <div id="carousel" class="hide-xs">
                         <h2 id="whitetitle">Featured Garden Designs</h2>
