--- a/project1.html
+++ b/project1.html
@@ -55,7 +55,7 @@
                 </nav>
             </header>
             <!------Main Content-------->
-            <section class="content-otherpages">
+            <section class="content-container">
                 <div class="content-grid">
                     <div class="project-info content-item">
                         <img src="">
