--- a/services.html
+++ b/services.html
@@ -39,11 +39,13 @@
         </div>
         <section class="main-body">
             <div class="top-bar">
-                <img id="gaia-logo-top" alt="logo" src="https://dsm01pap009files.storage.live.com/y4m9R_HTu5PouYK33ObsQ9kb9GF8ebirPWZzEYAlS3DbSUEzmz-7XXU9y6bcT2BBefhtoNbQ7YWGaaQexis0GsMdaI9Uy95V--vDJZZ5lJQZCXppIDNVTGaU3qscJA3n2HpASt1_h0krz3glFW0jejrCErOyC_B-HVa8pGYwpa2pNjLuoOiu4q-XXaQ5BzILkGO?width=165&height=97&cropmode=none">
+                <img id="hamburger" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218963&authkey=%21ABErlrmlD5xalUc&width=32&height=28">
+                <img id="gaia-logo-top"class="hide-xs" alt="logo" src="https://dsm01pap009files.storage.live.com/y4m9R_HTu5PouYK33ObsQ9kb9GF8ebirPWZzEYAlS3DbSUEzmz-7XXU9y6bcT2BBefhtoNbQ7YWGaaQexis0GsMdaI9Uy95V--vDJZZ5lJQZCXppIDNVTGaU3qscJA3n2HpASt1_h0krz3glFW0jejrCErOyC_B-HVa8pGYwpa2pNjLuoOiu4q-XXaQ5BzILkGO?width=165&height=97&cropmode=none">
                 <div class="spacer"></div>
             </div>
             <header id="alternate-nav-header">
-                <nav id="alternate-nav" class="hide-xs">
+                <img id="gaia-logo-mobile" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218964&authkey=%21AJJM923R_qkmnYU&width=217&height=128">
+                <nav id="main-nav">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
                         <li class="non-drop"><a href="gallery.html">Gallery</a></li>
@@ -61,17 +63,26 @@
                 </nav>
             </header>
             <!------Main Content-------->
-            <section class="content-otherpages">
+            <section class="content-container">
                 <div id="servicesbanner">
-                    <div id="text1">
-                        <h2>gaia gardens specializes in:</h2>
-                        <h2>garden design,</h2>
-                        <h2>garden installation,</h2>
-                        <h2>and tree care.</h2>
+                    <div class="hide-xs" id="text1">
+                        <h2 id="services-slidein1">gaia gardens specializes in:</h2>
+                        <h2 id="services-slidein2">garden design,</h2>
+                        <h2 id="services-slidein3">garden installation,</h2>
+                        <h2 id="services-slidein4">and tree care.</h2>
                     </div>
-                    <div id="text2">
-                        <h4>Please call to schedule an appointment and fill out our quick questionnaire.</h4>
-                        <a id="link" href="#questionnaire">
+                    <div class="hide-xl" id="mobiletext1">
+                        <h2 class="hide-xl">Gaia Gardens specializes in garden design, installation and tree care.</h2>
+                    </div>
+                    <div class="hide-xs" id="text2">
+                        <h4 class="hide-xs" id="pleasecallslidein">Please call to schedule an appointment and fill out our quick questionnaire.</h4>
+                        <a class="hide-xs" id="link" href="#questionnaire">
+                            <p>View Job Form</p>
+                        </a>
+                    </div>
+                    <div class="hide-xl" id="mobiletext2">
+                        <h4 class="hide-xl" id="pleasecallslidein">Please call to schedule an appointment and fill out our quick questionnaire.</h4>
+                        <a class="hide-xl" id="link" href="#questionnaire">
                             <p>View Job Form</p>
                         </a>
                     </div>
@@ -119,9 +130,9 @@
             </section>
             
             <!---footer---->
-            <section class="footer hide-xs">
-                <img id="gaiaartwork" alt="Gaia Gardens Logo" src="https://dsm01pap009files.storage.live.com/y4mifrXWDn3yxB9gNAbVy-Jupr7RdVoeD0kT7TOj5EGvlu9PlruiEE_PYUQQbYkNcsWnRDShMMbOlPxawJz4W0eNv2sY2my3F6KodFZ8nEQTxGMs_5nxZ-_zR8HdlmTIFI4hF0oIhA5LX70OFrwnEfauXGKGcWoj6_lmcTfAcJ6nCyubuO_No4MUYpLi_uggUK7?width=415&height=417&cropmode=none">
-                <ul class="footer-ul">
+            <section class="footer">
+                <img class="hide-xs" id="gaiaartwork" alt="Gaia Gardens Logo" src="https://dsm01pap009files.storage.live.com/y4mifrXWDn3yxB9gNAbVy-Jupr7RdVoeD0kT7TOj5EGvlu9PlruiEE_PYUQQbYkNcsWnRDShMMbOlPxawJz4W0eNv2sY2my3F6KodFZ8nEQTxGMs_5nxZ-_zR8HdlmTIFI4hF0oIhA5LX70OFrwnEfauXGKGcWoj6_lmcTfAcJ6nCyubuO_No4MUYpLi_uggUK7?width=415&height=417&cropmode=none">
+                <ul class="footer-ul hide-xs">
                     <li class="footer-li" id="contact">
                         <h5 class="small-heading">Contact</h5>
                         <div class="three-line-container">
