--- a/project1.html
+++ b/project1.html
@@ -29,10 +29,13 @@
     
     
     <body>
+        <!------Loading bar------>
+        <div class="loader"></div>
         <section class="main-body">
             <div class="top-bar">
-                <img id="hamburger" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218963&authkey=%21ABErlrmlD5xalUc&width=32&height=28">
-                <img id="gaia-logo-top"class="hide-xs" alt="logo" src="https://dsm01pap009files.storage.live.com/y4m9R_HTu5PouYK33ObsQ9kb9GF8ebirPWZzEYAlS3DbSUEzmz-7XXU9y6bcT2BBefhtoNbQ7YWGaaQexis0GsMdaI9Uy95V--vDJZZ5lJQZCXppIDNVTGaU3qscJA3n2HpASt1_h0krz3glFW0jejrCErOyC_B-HVa8pGYwpa2pNjLuoOiu4q-XXaQ5BzILkGO?width=165&height=97&cropmode=none">
+                <!------Navigation------>
+                <!--mobile--><img id="hamburger" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218963&authkey=%21ABErlrmlD5xalUc&width=32&height=28">
+                <img id="gaia-logo-top"class="hide-xs" alt="logo" src="https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC44x8AAAAAAJU_I6CB1PtjBDA?width=165&height=97">
                 <div class="spacer"></div>
             </div>
             <header id="alternate-nav-header">
@@ -49,7 +52,7 @@
                                 <a href="services.html#questionnaire">Hire Us!</a>
                             </div>
                         </li>
-                        <li class="non-drop"><a href="wip.html">About</a></li>
+                        <li class="non-drop"><a href="about.html">About</a></li>
                         <li class="non-drop"><a href="wip.html">Contact</a></li>
                     </ul>
                 </nav>
